# fcpxml-markers

./: .pre-commit-config.yaml  .versionrc.js  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_template.yml
.github/workflows/: release_github.yml
fcpxml_markers/: __main__.py  cli.py  cli_args.py  extract_frames.py  extract_gif.py  extract_thumbs.py  fcpxml_parse.py
fcpxml_markers/custom_fpcxml_adapter/: fcpx_xml.py  manifest.json
scripts/: init_app_vars.sh
scripts/pyinstaller/: build_mac.sh
